--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -1,4 +1,3 @@
-  
 name: Update gist with WakaTime stats
 on:
   schedule:
@@ -10,7 +9,7 @@ jobs:
       - uses: actions/checkout@master
       - name: waka-box
         uses: matchai/waka-box@v4.0.3
-      - env:
+        env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           GIST_ID: f13f61647634377ee8556cd0e9859c48
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
